--- a/LuanVanTotNghiep/Web.config
+++ b/LuanVanTotNghiep/Web.config
@@ -85,7 +85,5 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="NhaHangDBContext" connectionString="data source=DESKTOP-9F38O5I\SQLEXPRESS;initial catalog=ql_nhahangthangcong;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="QLNhaHangEntities" connectionString="metadata=res://*/Models.NhaHangModel.csdl|res://*/Models.NhaHangModel.ssdl|res://*/Models.NhaHangModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-9F38O5I\SQLEXPRESS;initial catalog=ql_nhahangthangcong;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <add name="NhaHangDBContext" connectionString="data source=DESKTOP-9F38O5I\SQLEXPRESS;initial catalog=ql_nhahangthangcong;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" /><add name="QLNhaHangEntities" connectionString="metadata=res://*/Models.NhaHangModel.csdl|res://*/Models.NhaHangModel.ssdl|res://*/Models.NhaHangModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-9F38O5I\SQLEXPRESS;initial catalog=ql_nhahangthangcong;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
