--- a/LuanVanTotNghiep/LuanVanTotNghiep.csproj
+++ b/LuanVanTotNghiep/LuanVanTotNghiep.csproj
@@ -169,15 +169,21 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\BanAPIController.cs" />
     <Compile Include="Controllers\ChucVuAPIController.cs" />
     <Compile Include="Controllers\DonViTinhAPIController.cs" />
     <Compile Include="Controllers\HinhAnhAPIController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\KhachHangAPIController.cs" />
+    <Compile Include="Controllers\LoaiKhachHangAPIController.cs" />
     <Compile Include="Controllers\LoaiMonAnAPIController.cs" />
+    <Compile Include="Controllers\NhaCungCapAPIController.cs" />
     <Compile Include="Controllers\NhaHangAPIController.cs" />
     <Compile Include="Controllers\NhanVienAPIController.cs" />
+    <Compile Include="Controllers\PhieuNhapAPIController.cs" />
     <Compile Include="Controllers\TaiKhoanAPIController.cs" />
     <Compile Include="Controllers\TangAPIController.cs" />
+    <Compile Include="Controllers\ThucPhamAPIController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -262,7 +268,19 @@
     <Compile Include="Models\sp_InsUpdDelDonViTinh_Result.cs">
       <DependentUpon>NhaHangModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\sp_InsUpdDelDuyetGioHang_Result.cs">
+      <DependentUpon>NhaHangModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\sp_InsUpdDelGioHang_Result.cs">
+      <DependentUpon>NhaHangModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\sp_InsUpdDelHinhAnh_Result.cs">
+      <DependentUpon>NhaHangModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\sp_InsUpdDelKhachHang_Result.cs">
+      <DependentUpon>NhaHangModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\sp_InsUpdDelLoaiKhachHang_Result.cs">
       <DependentUpon>NhaHangModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\sp_InsUpdDelLoaiMonAn_Result.cs">
@@ -271,10 +289,16 @@
     <Compile Include="Models\sp_InsUpdDelMonAn_Result.cs">
       <DependentUpon>NhaHangModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\sp_InsUpdDelNhaCungCap_Result.cs">
+      <DependentUpon>NhaHangModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\sp_InsUpdDelNhaHang_Result.cs">
       <DependentUpon>NhaHangModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\sp_InsUpdDelNhanVien_Result.cs">
+      <DependentUpon>NhaHangModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\sp_InsUpdDelPhieuNhap_Result.cs">
       <DependentUpon>NhaHangModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\sp_InsUpdDelTaiKhoan_Result.cs">
@@ -300,28 +324,40 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\app.js" />
+    <Content Include="app\banController.js" />
     <Content Include="app\chucVuController.js" />
-    <Content Include="app\components\home\homeController.js" />
-    <Content Include="app\components\home\homeView.html" />
     <Content Include="app\hinhAnhController.js" />
     <Content Include="app\donViTinhController.js" />
+    <Content Include="app\homeController.js" />
+    <Content Include="app\khachHangController.js" />
+    <Content Include="app\loaiKhachHangController.js" />
     <Content Include="app\loaiMonAnController.js" />
+    <Content Include="app\nhaCungCapController.js" />
     <Content Include="app\nhaHangController.js" />
     <Content Include="app\nhanVienController.js" />
+    <Content Include="app\phieuNhapController.js" />
     <Content Include="app\taiKhoanController.js" />
     <Content Include="app\tangController.js" />
+    <Content Include="app\thucPhamController.js" />
+    <Content Include="app\View\Ban.html" />
     <Content Include="app\View\ChucVu.html" />
     <Content Include="app\View\DonViTinh.html" />
     <Content Include="app\View\HinhAnh.html" />
+    <Content Include="app\View\homeView.html" />
+    <Content Include="app\View\KhachHang.html" />
+    <Content Include="app\View\LoaiKhachHang.html" />
     <Content Include="app\View\LoaiMonAnList.html" />
     <Content Include="app\components\monan\monanListController.js" />
     <Content Include="app\components\monan\MonAnView.html" />
     <Content Include="app\components\nhanvien\nhanvienListController.js" />
     <Content Include="app\components\nhanvien\nhanvienListView.html" />
+    <Content Include="app\View\NhaCungCap.html" />
     <Content Include="app\View\NhaHang.html" />
     <Content Include="app\View\NhanVien.html" />
+    <Content Include="app\View\PhieuNhap.html" />
     <Content Include="app\View\TaiKhoan.html" />
     <Content Include="app\View\Tang.html" />
+    <Content Include="app\View\ThucPham.html" />
     <Content Include="Assets\admin\css\AdminLTE.css" />
     <Content Include="Assets\admin\css\AdminLTE.min.css" />
     <Content Include="Assets\admin\css\skins\skin-black-light.css" />
@@ -422,6 +458,7 @@
     <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="app\components\home\" />
     <Folder Include="app\components\loaimonan\" />
     <Folder Include="app\shared\" />
     <Folder Include="App_Data\" />
