--- a/LuanVanTotNghiep/LuanVanTotNghiep.csproj
+++ b/LuanVanTotNghiep/LuanVanTotNghiep.csproj
@@ -177,10 +177,12 @@
     <Compile Include="Controllers\KhachHangAPIController.cs" />
     <Compile Include="Controllers\LoaiKhachHangAPIController.cs" />
     <Compile Include="Controllers\LoaiMonAnAPIController.cs" />
+    <Compile Include="Controllers\MonAnAPIController.cs" />
     <Compile Include="Controllers\NhaCungCapAPIController.cs" />
     <Compile Include="Controllers\NhaHangAPIController.cs" />
     <Compile Include="Controllers\NhanVienAPIController.cs" />
     <Compile Include="Controllers\PhieuNhapAPIController.cs" />
+    <Compile Include="Controllers\sanphamController.cs" />
     <Compile Include="Controllers\TaiKhoanAPIController.cs" />
     <Compile Include="Controllers\TangAPIController.cs" />
     <Compile Include="Controllers\ThucPhamAPIController.cs" />
@@ -332,6 +334,7 @@
     <Content Include="app\khachHangController.js" />
     <Content Include="app\loaiKhachHangController.js" />
     <Content Include="app\loaiMonAnController.js" />
+    <Content Include="app\monAnController.js" />
     <Content Include="app\nhaCungCapController.js" />
     <Content Include="app\nhaHangController.js" />
     <Content Include="app\nhanVienController.js" />
@@ -347,10 +350,7 @@
     <Content Include="app\View\KhachHang.html" />
     <Content Include="app\View\LoaiKhachHang.html" />
     <Content Include="app\View\LoaiMonAnList.html" />
-    <Content Include="app\components\monan\monanListController.js" />
-    <Content Include="app\components\monan\MonAnView.html" />
-    <Content Include="app\components\nhanvien\nhanvienListController.js" />
-    <Content Include="app\components\nhanvien\nhanvienListView.html" />
+    <Content Include="app\View\MonAn.html" />
     <Content Include="app\View\NhaCungCap.html" />
     <Content Include="app\View\NhaHang.html" />
     <Content Include="app\View\NhanVien.html" />
@@ -417,6 +417,43 @@
     <Content Include="Assets\admin\js\app.min.js" />
     <Content Include="Assets\admin\js\pages\dashboard.js" />
     <Content Include="Assets\admin\js\pages\dashboard2.js" />
+    <Content Include="Assets\client\css\ajax-loader.gif" />
+    <Content Include="Assets\client\css\animate.css" />
+    <Content Include="Assets\client\css\bootstrap-datepicker.css" />
+    <Content Include="Assets\client\css\bootstrap.min.css" />
+    <Content Include="Assets\client\css\icomoon.css" />
+    <Content Include="Assets\client\css\jquery.timepicker.css" />
+    <Content Include="Assets\client\css\magnific-popup.css" />
+    <Content Include="Assets\client\css\open-iconic-bootstrap.min.css" />
+    <Content Include="Assets\client\css\owl.carousel.min.css" />
+    <Content Include="Assets\client\css\owl.theme.default.min.css" />
+    <Content Include="Assets\client\css\style.css" />
+    <Content Include="Assets\client\css\test.css" />
+    <Content Include="Assets\client\fonts\icomoon\icomoon.svg" />
+    <Content Include="Assets\client\fonts\open-iconic\open-iconic.svg" />
+    <Content Include="Assets\client\images\about_img_1.jpg" />
+    <Content Include="Assets\client\images\bg_3.jpg" />
+    <Content Include="Assets\client\images\loc.png" />
+    <Content Include="Assets\client\images\menu_1.jpg" />
+    <Content Include="Assets\client\images\menu_2.jpg" />
+    <Content Include="Assets\client\images\menu_3.jpg" />
+    <Content Include="Assets\client\images\offer_1.jpg" />
+    <Content Include="Assets\client\images\offer_2.jpg" />
+    <Content Include="Assets\client\images\offer_3.jpg" />
+    <Content Include="Assets\client\images\reservation_1.jpg" />
+    <Content Include="Assets\client\js\bootstrap-datepicker.js" />
+    <Content Include="Assets\client\js\bootstrap.min.js" />
+    <Content Include="Assets\client\js\google-map.js" />
+    <Content Include="Assets\client\js\jquery-3.2.1.min.js" />
+    <Content Include="Assets\client\js\jquery.animateNumber.min.js" />
+    <Content Include="Assets\client\js\jquery.easing.1.3.js" />
+    <Content Include="Assets\client\js\jquery.magnific-popup.min.js" />
+    <Content Include="Assets\client\js\jquery.min.js" />
+    <Content Include="Assets\client\js\jquery.timepicker.min.js" />
+    <Content Include="Assets\client\js\jquery.waypoints.min.js" />
+    <Content Include="Assets\client\js\main.js" />
+    <Content Include="Assets\client\js\owl.carousel.min.js" />
+    <Content Include="Assets\client\js\popper.min.js" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -442,6 +479,10 @@
     </Content>
     <Content Include="Scripts\js\angular.js" />
     <Content Include="upload\admin.jpg" />
+    <Content Include="upload\anh1.jpg" />
+    <Content Include="upload\anh2.jpg" />
+    <Content Include="upload\anh3.jpg" />
+    <Content Include="upload\anh4.jpg" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -458,8 +499,6 @@
     <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="app\components\home\" />
-    <Folder Include="app\components\loaimonan\" />
     <Folder Include="app\shared\" />
     <Folder Include="App_Data\" />
     <Folder Include="Assets\admin\libs\angular-ui-router\" />
@@ -480,8 +519,22 @@
     <Content Include="Models\NhaHangModel.edmx.diagram">
       <DependentUpon>NhaHangModel.edmx</DependentUpon>
     </Content>
+    <Content Include="Assets\client\fonts\icomoon\icomoon.eot" />
+    <Content Include="Assets\client\fonts\icomoon\icomoon.ttf" />
+    <Content Include="Assets\client\fonts\icomoon\icomoon.woff" />
+    <Content Include="Assets\client\fonts\open-iconic\open-iconic.eot" />
+    <Content Include="Assets\client\fonts\open-iconic\open-iconic.otf" />
+    <Content Include="Assets\client\fonts\open-iconic\open-iconic.ttf" />
+    <Content Include="Assets\client\fonts\open-iconic\open-iconic.woff" />
+    <Content Include="Assets\client\images\.DS_Store" />
+    <Content Include="Assets\client\scss\style.scss" />
     <None Include="packages.config" />
     <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\MONANs\Index.cshtml" />
+    <Content Include="Views\sanpham\chitiet.cshtml" />
+    <Content Include="Views\Shared\_Footer.cshtml" />
+    <Content Include="Views\Shared\_loaimonan.cshtml" />
+    <Content Include="Views\Shared\_nhahang.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
