--- a/LuanVanTotNghiep/packages.config
+++ b/LuanVanTotNghiep/packages.config
@@ -154,5 +154,6 @@
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XPath" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net461" />
+  <package id="toastr" version="2.1.1" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
